# whip-8

./: Cargo.toml
cli/: Cargo.toml
cli/src/: PIXELS_LICENSE.md  chip_8_interpreter.rs  commands.rs  frontend.rs  main.rs  timer.rs  utils.rs
interpreter/: Cargo.toml
interpreter/src/: common_test_data.rs  display.rs  instructions.rs  keypad.rs  lib.rs  processor.rs  registers.rs  types.rs
src/: instructions.rs  lib.rs  processor.rs  types.rs
