[package]
name = "whip-8-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
interpreter = { path = "../interpreter" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.10"
winit = {version = "0.29.0", features = ["rwh_05"]}
winit_input_helper = "0.15"
pixels = "0.14"
log = "0.4"
error-iter = "0.4"
grid = "0.15.0"
